--- a/src/main/resources/templates/Admin.html
+++ b/src/main/resources/templates/Admin.html
@@ -82,7 +82,9 @@
                                             <form id="formEditUser">
                                                 <div class="modal-body col-md text-center">
                                                     <div class="form-group text-center">
-                                                        <label for="id1" class="mb-0"><b>ID</b></label>
+                                                        <label for="id1" class="mb-0">
+                                                            <b>ID</b>
+                                                        </label>
                                                         <input th:name="id" th:type="text"
                                                                class="form-control" id="id1" placeholder="ID"
                                                                style="width:25vh; margin-left:auto; margin-right:auto"
@@ -110,10 +112,11 @@
                                                                class="form-control"
                                                                id="email1" placeholder="Email"
                                                                style="width:25vh; margin-left:auto; margin-right:auto">
-                                                        <label for="password1" class="mb-0 mt-3"><b>Password</b></label>
+                                                        <label for="password1"
+                                                               class="mb-0 mt-3"><b>Password</b></label>
                                                         <input th:name="password" th:type="password"
-                                                               class="form-control" id="password1"
-                                                               placeholder="Password"
+                                                               class="form-control"
+                                                               id="password1"
                                                                style="width:25vh; margin-left:auto; margin-right:auto">
                                                     </div>
                                                     <div class="form-group text-center" style="width: 25vh; margin-left: auto; margin-right: auto;">
@@ -256,10 +259,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
+<script type="text/javascript" src="../static/fillModalWithUserData.js"></script>
 <script type="text/javascript" src="../static/DeleteUser.js"></script>
 <script type="text/javascript" src="../static/EditUser.js"></script>
 <script type="text/javascript" src="../static/GetUserId.js"></script>
-<script type="text/javascript" src="../static/fillModalWithUserData.js"></script>
 <script type="text/javascript" src="../static/UserTable.js"></script>
 <script type="text/javascript" src="../static/AddUser.js"></script>
 <script type="text/javascript" src="../static/ShowUserInfo.js"></script>
